# ntnu-captcha-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  flake.nix  pyproject.toml  unit.config.json
.github/workflows/: docker-publish.yml
src/ntnu_captcha_service/: captcha.py  requests.py  route.py
tests/unit_test/ocr/: test_ocr.py
